--- a/IndustrialAutomationSolutions.html
+++ b/IndustrialAutomationSolutions.html
@@ -69,7 +69,7 @@
             <li><a  href="insights.html"><p  class="styo" style="margin-left:-141.5px;margin-top:315px">Insights </p></a></li>
           </div>
           <div class="getin">
-          <li><a href="PLACEMENTS.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Get in touch</p></a></li>
+          <li><a href="getintouch.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Get in touch</p></a></li>
         </div>
         </ul>
         </div>
@@ -79,15 +79,14 @@
            <pre><div class="hpos1">
                 <h1>INDUSTRIAL AUTOMATION SOLUTIONS</h1>
              </div></pre>
-             <div class="image2" style="margin-left:-600px;margin-top:150px;z-index:0;" >
+             <div class="image2" style="margin-left:-605px;margin-top:150px;z-index:0;" >
                 <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture54.PNG" width="500px" height="280px" style="border-width:2px;border-style:solid;border-color:orange"></div>
                 <div class="image3" style="margin-left:-380px;margin-top:400px;z-index:0" >
                     <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture55.PNG" width="500px" height="280px" style="border-width:2px;border-style:solid;border-color:yellow"></div>
                    <pre><div class="parapos1" style="margin-left:100px;margin-top:-10px;color:white;font-size:25px;line-height:40px;font-family:sans-serif">
         <p>Envision specializes in BIW (Body-in-White) robotics simulation & our advanced simulation<br>solutions are designed to optimize and streamline the automation processes in the<br>automotive industry. Using advanced technologies and systems, mechanical engineers can<br>automate and optimize industrial processes, increase productivity, and improve<br>operational efficiency with industrial automation solutions. Industrial automation solutions<br>typically integrate hardware, software, and control systems to streamline operations and<br>reduce manual intervention. 
-Here are some of their key features:
             </p></div></pre>
-           <pre><div class="parapos2" style="margin-left:-1008px;margin-top:350px;color:white;font-size:25px;line-height:40px;font-family:sans-serif">
+           <pre><div class="parapos2" style="margin-left:-1008px;margin-top:290px;color:white;font-size:25px;line-height:40px;font-family:sans-serif">
             <p>In industrial automation, robots are often used to perform repetitive or complex tasks with<br>accuracy and efficiency. Advanced software tools are used to simulate & optimize the<br>robotic processes involved in BIW assembly, such as welding, handling & material<br>placement. Using state-of-the-art robotic simulation software, we virtually program and<br>validate robot trajectories and sequences. This allows us to verify the feasibility and<br>accuracy of the robot's movements, ensuring collision-free operations, optimizing cycle<br>times, and improving overall productivity. Virtual programming minimizes the need for<br>physical prototypes and enables quick iterations and adjustments.</p>
 </div></pre>
                 </div>
@@ -141,9 +140,9 @@ Here are some of their key features:
                  <img src="Picture71.png" width="350px" height="300px" >
                 </div>
                 <div class="para-1">
-                <p>They are used to automate the control of various devices and equipment on<br> the factory floor. A human-machine interface (HMI) is a way for operators to<br> interact with automation systems using a graphical user interface (GUI).<br> Operators can monitor and control industrial processes, make adjustments,<br> and respond to alarms and anomalies with HMIs, which display real-time data,<br>control parameters, and provide visual feedback on equipment and processes.<br> The objective of industrial automation is to optimize and control industrial<br> processes so that desired outcomes can be achieved. Variables such as speed,<br> temperature, pressure, and quality are regulated using algorithms and control<br> strategies. By optimizing and controlling processes, resources are efficiently<br> utilized, product quality is improved, waste is reduced, and productivity is<br> increased.<br> 
-
-                  Integrating automation systems with enterprise-level systems, such as<br> manufacturing execution systems (MES), enterprise resource planning systems<br> (ERPs), and data analytics platforms, is often an integral part of industrial<br> automation solutions. This integration enables data sharing,<br> process optimization, production planning, and improved coordination<br> between shop floor operations and business functions.<br>Featured maintenance and remote monitoring are included in industrial<br> automation solutions. In order to detect anomalies, predict equipment<br> failures, and schedule maintenance activities,<br>advanced technologies like machine learning algorithms and condition<br> monitoring systems can be integrated. By doing so, downtime is minimized,<br> maintenance efforts are optimized, and continuous operation is ensured.
+                <p>They are used to automate the control of various devices and equipment on<br> the factory floor. A human-machine interface (HMI) is a way for operators to<br> interact with automation systems using a graphical user interface (GUI).<br> Operators can monitor and control industrial processes, make adjustments,<br> and respond to alarms and anomalies with HMIs, which display real-time data,<br>control parameters, and provide visual feedback on equipment and processes.<br> The objective of industrial automation is to optimize and control industrial<br> processes so that desired outcomes can be achieved. Variables such as speed,<br> temperature, pressure, and quality are regulated using algorithms and control<br> strategies. By optimizing and controlling processes, resources are efficiently<br> utilized, product quality is improved, waste is reduced, and productivity is<br> increased.</p></div> 
+<div class="para-2">
+                  Integrating automation systems with enterprise-level systems, such as<br> manufacturing execution systems (MES), enterprise resource planning systems<br> (ERPs), and data analytics platforms, is often an integral part of industrial<br> automation solutions. This integration enables data sharing,<br> process optimization, production planning, and improved coordination<br> between shop floor operations and business functions.<br>Featured maintenance and remote monitoring are included in industrial<br> automation solutions. In order to detect anomalies, predict equipment<br> failures, and schedule maintenance activities,<br>advanced technologies like machine learning algorithms and condition<br> monitoring systems can be integrated. By doing so, downtime is minimized,<br> maintenance efforts are optimized, and continuous operation is ensured.
                   </p></div>
                 <div class="pic72">
                   <img src="Picture72.png" width="350px" height="300px" >
@@ -238,14 +237,11 @@ India - 560085</p></div>
 OMR, Oggiyamduraipakkam,<br>
 India - 600097</p></div>
 <div class="GA">
-<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
-xth floor, Office No.xxx,<br>
-xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+<p>Hessehlbuhl 16/1, 88630 Pfullendorf,<br>Germany
 </p></div>
 <div class="RA">
-<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
-xth floor, Office No.xxx,<br> 
-xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+<p>Municipiul Oradea,Splaiul Crisanei,<br> Nr. 3, Bloc A1, Etaj
+  4, Ap. 1, Judet Bihor
 </p></div>
 
 
