--- a/digitalfacilitysolutions.html
+++ b/digitalfacilitysolutions.html
@@ -52,7 +52,7 @@
   
         <ul>
           <div class="what">
-            <li><a href="#"><p  class="styo" style="margin-left:-141.5px;margin-top:-52.2px">What We Do</p></a></li><br>
+            <li><a href="What We Do.html"><p  class="styo" style="margin-left:-141.5px;margin-top:-52.2px">What We Do</p></a></li><br>
           </div><br>
           <div class="Whos">
             <li><a  href="WhoWeAre.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Who We Are</p><i class=""></i></a>
@@ -69,7 +69,7 @@
             <li><a  href="insights.html"><p  class="styo" style="margin-left:-141.5px;margin-top:315px">Insights </p></a></li>
           </div>
           <div class="getin">
-          <li><a href="PLACEMENTS.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Get in touch</p></a></li>
+          <li><a href="getintouch.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Get in touch</p></a></li>
         </div>
         </ul>
         </div>
@@ -87,6 +87,7 @@ For example, collisions due to insufficient headroom are often only discovered<b
         <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture52.PNG" width="470px" height="300px" style="border-width:2px;border-style:solid;border-color:violet"></div>   
 </div>
 <div class="container2">
+  <div class="hp-2"><pre><h1>DIGITAL FACILITY SOLUTIONS</h1></pre></div>
   <pre><div class="parapos4">
   <p>Digital Factory refers to the integration of digital technologies and<br>data-driven systems into the manufacturing and production<br>processes. It involves the use of advanced technologies such as<br>Internet of Things (IoT), Artificial Intelligence (AI), robotics,<br>simulation, and data analytics to optimize and improve various<br>aspects of the factory operations. The goal of the digital factory is to<br>enhance efficiency, productivity, flexibility, and quality while reducing<br>costs and lead times.
   </p></div></pre>
@@ -98,6 +99,7 @@ For example, collisions due to insufficient headroom are often only discovered<b
   <img src="Picture61.PNG" width="750px" height="600px" style="border-width:2px;border-style:solid;border-color:salmon"></div>
 </div>
 <div class="container3">
+  <div class="hp-3"><pre><h1>DIGITAL FACILITY SOLUTIONS</h1></pre></div>
  <pre><div class="parapos6">
 <p>Scanning for digitalization plays a crucial role in the overall digital transformation of manufacturing<br>processes by capturing accurate physical data and converting it into digital formats.
 </p></div></pre>
@@ -119,6 +121,7 @@ Digital facility solutions use data analytics techniques to analyse collected da
 </div></pre>
 </div>
 <div class="container4">
+  <div class="hp-4"><pre><h1>DIGITAL FACILITY SOLUTIONS</h1></pre></div>
   <div class="parapos8">
   <p>In order to reduce operating costs and improve energy efficiency, digital facility solutions concentrate on energy<br> management and optimization. Energy consumption patterns are monitored and analyzed, energy waste is identified, and<br> recommendations are provided for energy reduction. In order to minimize energy consumption while maintaining occupant<br> comfort, HVAC systems, lighting controls, and equipment scheduling can be optimized.<br>
    <br> Digital facility solutions provide remote monitoring and control of mechanical systems within a facility. Facility managers<br> can access real-time data, monitor performance, and control equipment remotely through centralized dashboards or<br> mobile applications. By doing so, proactive decisions can be made, issues can be quickly resolved, and troubleshooting can<br> be done remotely. Asset and Inventory Management: Digital facility solutions help you manage assets and inventory. They<br> can track equipment usage, monitor maintenance schedules, and manage spare parts and inventory levels. As a result,<br> operations are streamlined, asset utilization is improved, and equipment failures are reduced.<br>
@@ -142,13 +145,12 @@ Digital facility solutions use data analytics techniques to analyse collected da
   <span style='font-size:30px;'>&#9670;</span> Architectural structures such as mezzanine floor, platforms, support beams etc.
   <span style='font-size:30px;'>&#9670;</span> Detailed MEPF models created referring both scan data and 2D layouts
   <span style='font-size:30px;'>&#9670;</span> Structural BIM modeling with columns, floors, roof etc.
-  <span style='font-size:30px;'>&#9670;</span> Workstations, Market space, Warehouse, Kitting  areas, QC rooms etc. included<br>       matching the scan data.
+  <span style='font-size:30px;'>&#9670;</span> Workstations, Market space, Warehouse, Kitting  areas, QC rooms etc.
   <span style='font-size:30px;'>&#9670;</span> Material storage racks, Dunnage's and material movement Trolleys added
   <span style='font-size:30px;'>&#9670;</span> Office rooms, sit out areas inside the facility included
-  <span style='font-size:30px;'>&#9670;</span> Overhead structures, roof
 </p></div></pre>
 <div class="pic74">
-<img src="Picture74.png" width="700px" height="700px"></div>
+<img src="Picture74.png" width="830px" height="700px"></div>
 
 <div class="h-3">
   <h2>Applications:
@@ -251,14 +253,11 @@ India - 560085</p></div>
 OMR, Oggiyamduraipakkam,<br>
 India - 600097</p></div>
 <div class="GA">
-<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
-xth floor, Office No.xxx,<br>
-xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+<p>Hessehlbuhl 16/1, 88630 Pfullendorf,<br>Germany
 </p></div>
 <div class="RA">
-<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
-xth floor, Office No.xxx,<br> 
-xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+<p>Municipiul Oradea,Splaiul Crisanei,<br> Nr. 3, Bloc A1, Etaj
+  4, Ap. 1, Judet Bihor
 </p></div>
 
 
