--- a/dummy3.html
+++ b/dummy3.html
@@ -84,14 +84,14 @@
         <div class="container3" style="display:flex">
              
       <div class="videopos">     
-    <video autoplay muted id="myvid" width="1600vw">
+    <video autoplay muted id="myvid" >
         <!-- <button class="play-pause-btn" type="button" id="custom-controls" style="position:absolute;z-index:0;margin-top:34.8vw;margin-left:59.5vw;width: 5vw;height: 2vw;"><i class="fa fa-pause"></i>  Pause</button> -->
         <source src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\envisionis-video.mp4" id="myvid">
        
     </video>
 </div>
 
-    <button class="play-pause-btn" type="button" id="custom-controls" style="position:absolute;z-index:0;margin-top:42.8vw;margin-left:1vw;width: 5vw;height: 2vw;"><i class="fa fa-pause"></i>  Pause</button>
+    <button class="play-pause-btn" type="button" id="custom-controls" style="position:absolute;z-index:0;margin-top:38.6vw;margin-left:1vw;width: 5vw;height: 2vw;"><i class="fa fa-pause"></i>  Pause</button>
   <script>
 
 
