--- a/learnmoredo.html
+++ b/learnmoredo.html
@@ -73,7 +73,7 @@
             <li><a  href="insights.html"><p  class="styo">Insights </p></a></li>
           </div>
           <div class="getin">
-          <li><a href="PLACEMENTS.html"><p class="styo" style="">Get in touch</p></a></li>
+          <li><a href="getintouch.html"><p class="styo" style="">Get in touch</p></a></li>
         </div>
         </ul>
         </div>
@@ -218,14 +218,11 @@ India - 560085</p></div>
 OMR, Oggiyamduraipakkam,<br>
 India - 600097</p></div>
 <div class="GA">
-<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
-xth floor, Office No.xxx,<br>
-xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+<p>Hessehlbuhl 16/1, 88630 Pfullendorf,<br>Germany
 </p></div>
 <div class="RA">
-<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
-xth floor, Office No.xxx,<br> 
-xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+<p>Municipiul Oradea,Splaiul Crisanei,<br> Nr. 3, Bloc A1, Etaj
+  4, Ap. 1, Judet Bihor
 </p></div>
 
 
