--- a/seemorewho.html
+++ b/seemorewho.html
@@ -73,7 +73,7 @@
             <li><a  href="insights.html"><p  class="styo">Insights </p></a></li>
           </div>
           <div class="getin">
-          <li><a href="PLACEMENTS.html"><p class="styo" style="">Get in touch</p></a></li>
+          <li><a href="getintouch.html"><p class="styo" style="">Get in touch</p></a></li>
         </div>
         </ul>
         </div>
@@ -116,10 +116,6 @@
     </div>
 
 </div>
-
-
-
-
 <div class="container9">
   <div class="Circle1">
       <div id="circle"></div></div>
@@ -129,7 +125,7 @@
           <div id="circle"></div></div>
           <div class="letG"><p>G</p></div>
 
-          <div class="para-1">
+          <div class="para1">
   <p>Envision Integrated Services function<br> as a full stakeholder to business,<br> offering a consulting-led approach<br> with an integrated portfolio of<br> technology that encompass the entire<br> Enterprise value chain. Our Customer-<br>centric Engagement Model defines<br> how we do engage with you, offering<br> specialized services and solutions that<br> meet the distinct needs of your<br> business.
   </p></div>
   <div class="hpost6">
@@ -204,14 +200,11 @@ India - 560085</p></div>
 OMR, Oggiyamduraipakkam,<br>
 India - 600097</p></div>
 <div class="GA">
-<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
-xth floor, Office No.xxx,<br>
-xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+<p>Hessehlbuhl 16/1, 88630 Pfullendorf,<br>Germany
 </p></div>
 <div class="RA">
-<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
-xth floor, Office No.xxx,<br> 
-xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+<p>Municipiul Oradea,Splaiul Crisanei,<br> Nr. 3, Bloc A1, Etaj
+  4, Ap. 1, Judet Bihor
 </p></div>
 
 
@@ -252,3 +245,6 @@ xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
 </div>
 
 </body>
+
+
+
