--- a/services1.html
+++ b/services1.html
@@ -448,14 +448,11 @@ India - 560085</p></div>
 OMR, Oggiyamduraipakkam,<br>
 India - 600097</p></div>
 <div class="GA">
-<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
-xth floor, Office No.xxx,<br>
-xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+<p>Hessehlbuhl 16/1, 88630 Pfullendorf,<br>Germany
 </p></div>
 <div class="RA">
-<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
-xth floor, Office No.xxx,<br> 
-xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+<p>Municipiul Oradea,Splaiul Crisanei,<br> Nr. 3, Bloc A1, Etaj
+  4, Ap. 1, Judet Bihor
 </p></div>
 
 
