--- a/engineeringdesignsolutions.html
+++ b/engineeringdesignsolutions.html
@@ -69,7 +69,7 @@
             <li><a  href="insights.html"><p  class="styo" style="margin-left:-141.5px;margin-top:315px">Insights </p></a></li>
           </div>
           <div class="getin">
-          <li><a href="PLACEMENTS.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Get in touch</p></a></li>
+          <li><a href="getintouch.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Get in touch</p></a></li>
         </div>
         </ul>
         </div>
@@ -204,14 +204,11 @@ India - 560085</p></div>
 OMR, Oggiyamduraipakkam,<br>
 India - 600097</p></div>
 <div class="GA">
-<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
-xth floor, Office No.xxx,<br>
-xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+<p>Hessehlbuhl 16/1, 88630 Pfullendorf,<br>Germany
 </p></div>
 <div class="RA">
-<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
-xth floor, Office No.xxx,<br> 
-xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+<p>Municipiul Oradea,Splaiul Crisanei,<br> Nr. 3, Bloc A1, Etaj
+  4, Ap. 1, Judet Bihor
 </p></div>
 
 
