--- a/insightsfourth.html
+++ b/insightsfourth.html
@@ -30,7 +30,7 @@
                 <i class='fa fa-globe'></i>
             </div>
             <div class="world" style="margin-left: 1655px;margin-top: -36px;font-size: 30px;">
-                <a href="#" target="_blank" style="text-decoration: none;color: rgb(17, 191, 249);"><p>Worldwide</p></a>
+                <a href="#" target="_blank" style="text-decoration: none;color: black"><p>Worldwide</p></a>
             </div>
             <div class="searchlogo" style="margin-left: 1800px;margin-top: -32px;font-size: 27px">
                 <i class="fa fa-search"></i>
