--- a/readmore.html
+++ b/readmore.html
@@ -29,7 +29,7 @@
                 <i class='fa fa-globe'></i>
             </div>
             <div class="world">
-                <a href="#" target="_blank" style="text-decoration: none;color: rgb(17, 191, 249);"><p>Worldwide</p></a>
+                <a href="#" target="_blank" style="text-decoration: none;color:black"><p>Worldwide</p></a>
             </div>
             <div class="searchlogo">
                 <i class="fa fa-search"></i>
