--- a/dummyseemorewhoslideshow.html
+++ b/dummyseemorewhoslideshow.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Services</title>
-    <link rel="stylesheet" href="seemorewho.css">
+    <link rel="stylesheet" href="dummyseemorewhoslideshow.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
