--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -100,7 +100,7 @@
 <div class="container2">
  
     <div class="slideshow-container">
-      <div class="mySlides fade">
+      <!-- <div class="mySlides fade">
         
         <div class="img1">
         <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\mains1.png" style="width:108.7vw;height: 78.6vh;z-index: 1;display: flex;">
@@ -114,12 +114,12 @@
         <div class="meimge1">
           <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture20.png" width="860px" height="640px">
         </div>
-        <!-- <div class="rd">
+        <div class="rd">
           <p>Read More<i class='fas fa-book-open'></i>
           </p>
-        </div> -->
+        </div>
   </div>
-      </div>
+      </div> -->
 
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade1">
